--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,86 @@
+/*global*/
 *{
     padding:0;
     margin:0;
 }
 body{
     font-family: arial;
+}
+p{
+    line-height: 2;
+}
+a{
+    text-decoration: none;
+}
+h1,h2,h3{
+    margin-bottom: 10px;
+}
+img{
+    max-width: 100%;
+}
+/*utilties*/
+.container{
+    width:80%;
+    margin:0 auto;
+}
+.btn{
+    display: block;
+    background-color: orange;
+    color:white;
+    text-align: center;
+    padding: 5px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+/*header*/
+.site-header{
+    background-image: url(./img/header.jpg);
+    height: 400px;
+    background-size: cover;
+    color:white;
+}
+.site-header a{
+    color:white;
+}
+.bar-menu{
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+}
+.menu a{
+    margin-right: 30px;
+}
+/*about*/
+
+.about-container{
+    display: flex;
+    justify-content: space-between;
+}
+.about-item{
+    margin-right: 30px;
+}
+
+/*houses*/
+
+.houses-item{
+    background-color: #dedede;
+}
+.houses-item-text{
+    padding: 20px;
+    
+}
+.price{
+    color:green;
+    font-weight: bold;
+}
+.icon-container{
+    display: flex;
+}
+.icon-container img{
+    margin-right: 20px;
+}
+.icons-list{
+    display: flex;
+    justify-content: space-between;
 }
